@@ -1,5 +1,10 @@
 2006-04-19  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * src/seahorse-key-properties.c: Automatically discover 
+    keys on the 'trust' page. Bug #335417
+    
+2006-04-19  Nate Nielsen  <nielsen@memberwebs.com>
+
     * libseahorse/seahorse-pgp-key.c: Map GPGME validity/trust
     enum into seahorse properly.
     
